# MyAIProject

./: .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  readme.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 55ad7b32f8c2_initial_schema.py  a1b2c3d4e5f6_add_device_id_remove_student_id.py  a3e8db88803c_add_subject_column.py
backend/scripts/: seed_courses.py
backend/src/: main.py
backend/src/api/: admin.py  auth.py  conversation.py  courses.py  import_.py  plan.py
backend/src/core/: config.py  database.py  redis.py  security.py
backend/src/llm_course_select_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/models/: audit_log.py  conversation.py  course.py  prerequisite.py  saved_plan.py  selection_rule.py  student.py
backend/src/schemas/: conversation.py  course.py  import_result.py  plan.py
backend/src/services/: audit.py  conversation.py  course_import.py  course_search.py  field_normalizer.py  import_analyzer.py  import_parser.py  (+7 more)
backend/tests/: conftest.py  test_api_conversation.py  test_api_health.py  test_api_import.py  test_conflict_commute.py  test_conflict_time.py  test_conversation_service.py  test_fallback_llm.py  test_field_normalizer.py  test_import_analyzer.py  test_import_parser.py  test_integration_pipeline.py  test_llm_cache.py  test_llm_factory.py  test_recommend_service.py  test_rule_validator.py  test_schedule_parser.py  test_schemas.py  test_session_store.py
(+152 files in other folders)
